# python--Youtuber

./: README.md
Auctux/simple-Flocking-simulation-python-pygame-master/: constants.py  main.py  ui.py
Autre/: Thread_VS_Mutli.py
Autre/3-Body-Problem-main/: main.py  pythonVersion.py
Bot Academy/: Github.txt  README.md
Bot Academy/Neuron network/: nn.py
Clear Code/: README.md
Clear Code/Engine Colision/: Engine colision.py
Clear Code/Roomba bot/: Roomba bot.py  pathfinder.py
Coder Space/: Conway's Game.py  README.md
Coder Space/3D engine/: clean.py
Coder Space/Langton's Ant/: Langton's Ant 2.py  Langton's Ant 3.py  Langton's Ant.py
Coder Space/Matrix rain/: Matrix rain vision.py  Matrix rain.py  Matrix rain2.py  Matrix rain3.py  Matrix rain4.py
Coder Space/Voxel Starfield/: Voxel Starfield 2.py  Voxel Starfield.py
Corey Schafer/: README.md
Corey Schafer/Requests/: main1.py  main2.py  main3.py  main4.py
Marjin van Vilet/: Github.txt
NeuralNine/: Locing&synchronizing.py  Qr_code.py  README.md  blockchain.py  garbage_collection.py  hangman.py  hash.py  thread_pool.py
Nicholas Renotte/: README.md
Nicholas Renotte/CNN/: .gitignore  README.md  main.py  pyproject.toml
Nicholas Renotte/CNN/logs/train/: events.out.tfevents.1767804977.DESKTOP-8NDRMQ4.18252.0.v2  events.out.tfevents.1767805273.DESKTOP-8NDRMQ4.22280.0.v2
Nicholas Renotte/CNN/logs/validation/: events.out.tfevents.1767804980.DESKTOP-8NDRMQ4.18252.1.v2  events.out.tfevents.1767805275.DESKTOP-8NDRMQ4.22280.1.v2
Sendtex/: .gitignore  README.md
Tech with Tim/: README.md
(+294 files in other folders)
